--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -1,7 +1,6 @@
-<divs>
+<div>
   <%= render "campaigns/shared/carousel" %>
 </div>
-
 
 <div class="container" style="margin-top: -120px;">
   <div class="row">
