--- a/app/views/campaigns/raising.html.erb
+++ b/app/views/campaigns/raising.html.erb
@@ -123,7 +123,7 @@
 
         <div class="custom-control d-flex custom-checkbox my-4">
           <input type="checkbox" class="custom-control-input" id="customCheck1">
-          <label class="custom-control-label text-left w-75" for="customCheck1">I have read and understand I need the above to be eligible to raise financing.</label>
+          <label class="custom-control-label text-left w-75 pl-3 ml-3 font-weight-bold" for="customCheck1">I have read and understand I need the above to be eligible to raise financing.</label>
         </div>
 
         <h5>
