--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -75,9 +75,9 @@
 
 <div class="row py-4 d-flex flex-column text-center background-green">
 
-  <p class="mb-3">We're proud to fund great entrepreneurs. Because we know Argentina would be a lot less interesting without them.</p>
-  <p class="font-weight-bold" style="font-size: 24px;">Are you with us?</p>
-  <h5><%= link_to "Start investing", "/campaigns", class: "btn btn-success" %></h5>
+  <p class="my-3">We're proud to fund great entrepreneurs. Because we know Argentina would be a lot less interesting without them.</p>
+  <p class="font-weight-bold my-3" style="font-size: 24px;">Are you with us?</p>
+  <h5><%= link_to "Start investing", "/campaigns", class: "btn btn-success my-3" %></h5>
 </div>
 <!-- end of row6 -->
 
