move show campaign live button to vertical navbar

--- a/app/views/campaigns/owners_dashboard.html.erb
+++ b/app/views/campaigns/owners_dashboard.html.erb
@@ -7,14 +7,12 @@
   <div class="col-md-10 col-lg-10 p-0">
 
     <div class="text-center mt-5">
-      <h4>Campaign dashboard for <strong><%= @company.name%> </gstrong></h4>
-        <%= link_to "See your campaign live", campaign_path(@company.campaign),  class: "mt-4 btn btn-outline-success"%>
+      <h4>Campaign dashboard for <strong><%= @company.name%> </gstrong>
       </div>
 
       <div class="container">
         <div class="row">
-
-          <div class="col-md-7 my-3">
+          <div class="col-md-7 my-4">
             <div class="row ">
               <div class="col">
                 <div class="card-campaign-status kpibox kpibox-green m-0">
@@ -52,7 +50,7 @@
             </div>
           </div>
 
-          <div class="col-md-5 my-3 ">
+          <div class="col-md-5 my-4">
             <div class="row ">
               <div class="col">
                 <div class="card-campaign-status kpibox kpibox-green m-0">
