--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -60,8 +60,9 @@
 .route-button-outline {
   box-shadow: 0 3px 10px rgba(72, 72, 72, 0.3);
   border-radius: 5px;
-  font-size: 20px;
-  width: 190px;
+  font-size: 23px;
+  font-weight: bold;
+  width: 210px;
   color: #00B63A;
   background-color: $light-green;
   border: 2px solid #00B63A;
@@ -78,8 +79,9 @@
 .route-button-full {
   box-shadow: 0 3px 10px rgba(72, 72, 72, 0.3);
   border-radius: 5px;
-  font-size: 20px;
-  width: 190px;
+  font-size: 23px;
+  font-weight: bold;
+  width: 210px;
   color: white;
   background-color: #00B63A;
   border: 1px solid #00B63A;
