--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -62,23 +62,17 @@
               <!-- invest field and button -->
               <%= simple_form_for [@campaign, @investment], url: new_campaign_investment_path(@campaign), method: :get do |f| %>
               <div class="form-input d-flex justify-space-between align-items-center mb-4 text-center justify-content-center">
-
-                <% if (current_user && !current_user.owner?) && !@campaign.expired? %>
-                  <%= f.input :amount, class: "input-field", placeholder: "$ 250", label: false, :required => true,  :input_html => { :type => "number" } %>
-                <% end %>
-
-                <% if (current_user && current_user.owner?) %>
-                  <h3 class="text-center small m-0 p-2 bg-secondary font-weight-bold"><em> Create Investor Account</em></h3>
-                  <!-- Nota: linkear create account button <p><%#= link_to "Create investor account", "/campaigns/new", class: "btn btn-secondary" %></p> -->
-                <% else %>
-                  <% if @campaign.expired? %>
+                <% if @campaign.expired? %>
                     <%= image_tag "closed.png",class:"closed-investment-position",  alt: "avatar" %>
-                  <% else %>
-                    <%= f.submit "Invest", class: "btn btn-success px-5", style:"margin-left: 16px;" %>
-                  <% end %>
+                <% else %>
+                    <% if current_user && current_user.owner? %>
+                        <h3 class="text-center small m-0 p-2 bg-secondary font-weight-bold"><em> Create Investor Account</em></h3>
+                    <% else %>
+                        <%= f.input :amount, class: "input-field", placeholder: "$ 250", label: false, :required => true,  :input_html => { :type => "number" } %>
+                        <%= f.submit "Invest", class: "btn btn-success px-5", style:"margin-left: 16px;" %>
+                    <% end %>
                 <% end %>
               </div>
-
             <% end %>
 
             <!-- campaign stats -->
