--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -41,12 +41,19 @@
   font-size: 36px;
   font-weight: bold;
   border-radius: 10px;
+  margin-bottom: 40px;
 }
 
 
 .search-form {
   margin: auto;
   height: 100%;
-  width: 60%;
+  width: 50%;
+  border-radius: 4px;
 }
 
+.select-filter {
+  height: 100%;
+  background-color: white;
+  color: grey;
+}
