bug fixes on owners dashboard

--- a/app/views/shared/_owner_dashboard_sidebar.html.erb
+++ b/app/views/shared/_owner_dashboard_sidebar.html.erb
@@ -9,7 +9,7 @@
     </a>
     <% end %>
   </div>
-  <%= link_to "See your campaign live", campaign_path(@company.campaign),  class: "mt-4 btn btn-outline-success"%>
+  <%= link_to "See your campaign live", campaign_path(@campaign),  class: "mt-4 btn btn-outline-success"%>
 </div>
 
 
