--- a/app/views/campaigns/raising.html.erb
+++ b/app/views/campaigns/raising.html.erb
@@ -128,7 +128,7 @@
 
         <h5>
           <%= link_to "/campaigns/new" do %>
-          <button class="btn btn-success px-5 py-2 my-4 aign" style="font-size: 18px;" id="btncheck" disabled>Start raising</button>
+          <button class="btn btn-success px-5 py-2 my-4 align" style="font-size: 18px;" id="btncheck" disabled>Start raising</button>
           <% end %>
         </h5>
 
