--- a/app/views/investments/new.html.erb
+++ b/app/views/investments/new.html.erb
@@ -67,10 +67,27 @@
           <input type="checkbox" class="custom-control-input" id="customCheck1">
           <label class="custom-control-label" for="customCheck1">I understand the risks of my investment</label>
         </div>
+
+
+        <script>
+  window.onload = () => {
+        // const toggle = document.getElementById("menu-toggle");
+        // toggle.addEventListener('click', (e) => {
+        //   e.preventDefault();
+        //   document.getElementById("wrapper").classList.toggle('toggled');
+        // });
+
+        const chk = document.getElementById('customCheck1');
+        const btn = document.getElementById('pay');
+        chk.addEventListener('change', () => {
+          btn.disabled = !btn.disabled; //true: disabled, false: enabled
+        }); //page load trigger event
+      }
+    </script>
 <!--
 <input type="submit" name="commit" value="Invest" class="btn btn-success px-5" style="margin-left: 16px;" data-disable-with="Invest"> -->
 
-        <%= submit_tag 'Pay Now', class: 'btn btn-success px-5', id:"pay" %>
+        <%= submit_tag 'Pay Now', class: 'btn btn-success px-5', id:"pay", disabled: true %>
 
         <script src="https://js.stripe.com/v3/"></script>
         <script>
