sticky footer update

--- a/app/views/shared/_owner_dashboard_sidebar.html.erb
+++ b/app/views/shared/_owner_dashboard_sidebar.html.erb
@@ -1,4 +1,4 @@
-<div class="bg-light border-right text-center" id="sidebar-wrapper" style="position: sticky;top: 57px;">
+<div class="text-center" id="sidebar-wrapper" style="position: sticky; top: 73px;">
   <div class="sidebar-heading text-left">
     <%= current_user.first_name%> <%= current_user.last_name%>
   </div>
