--- a/app/views/campaigns/investors.html.erb
+++ b/app/views/campaigns/investors.html.erb
@@ -1,11 +1,11 @@
 <div class="d-flex" id="wrapper">
 
   <!-- sidebar -->
-  <div class="col-md-2 col-lg-2 p-0">
+  <div class="col-md-2 col-lg-2 p-0 bg-light border-right navbar-vh">
     <%= render '/shared/owner_dashboard_sidebar' %>
   </div>
 
-  <div class="col-md-10 col-lg-10 p-0">
+  <div class="col-md-10 col-lg-10 p-0" style="min-height: calc( 100vh - 73px - 75px);">
     <div class="mt-5 container">
 
       <!-- Tabs here -->
