--- a/app/views/campaigns/owners_dashboard.html.erb
+++ b/app/views/campaigns/owners_dashboard.html.erb
@@ -1,10 +1,10 @@
 <div class="d-flex" id="wrapper">
   <!-- Sidebar -->
-  <div class="col-md-2 col-lg-2 p-0">
+  <div class="col-md-2 col-lg-2 p-0 bg-light border-right navbar-vh">
     <%= render '/shared/owner_dashboard_sidebar' %>
   </div>
 
-  <div class="col-md-10 col-lg-10 p-0">
+  <div class="col-md-10 col-lg-10 p-0" style="min-height: calc( 100vh - 73px - 75px);">
 
     <div class="text-center mt-5">
       <h4>Campaign dashboard for <strong><%= @company.name%> </gstrong>
