--- a/app/views/campaigns/shared/_form.html.erb
+++ b/app/views/campaigns/shared/_form.html.erb
@@ -2,7 +2,7 @@
  <div class="container">
   <div class="row text-center">
     ======= -->
-    <div class="container w-50">
+    <div class="container w-50" style="min-height: calc(100vh - 73px - 140px);">
       <div class="justify-content-center text-center">
 
         <%= simple_form_for(@campaign) do |c| %>
