--- a/app/views/investments/dashboard.html.erb
+++ b/app/views/investments/dashboard.html.erb
@@ -1,11 +1,11 @@
 <div class="container-fluid p-0">
   <div class="row">
 
-    <div class="col-md-2 col-lg-2">
+    <div class="col-md-2 col-lg-2 bg-light border-right navbar-vh">
       <%= render '/shared/investor_dashboard_sidebar' %>
     </div>
 
-    <div class="col-md-10 col-lg-10 p-0">
+    <div class="col-md-10 col-lg-10 p-0" style="min-height: calc( 100vh - 73px - 75px);">
       <div class="text-center mt-5">
         <h4>Welcome to your dashboard, <strong><%= current_user.first_name %>! </gstrong></h4>
         </div>
