graphs with nice labels

--- a/app/views/investments/dashboard.html.erb
+++ b/app/views/investments/dashboard.html.erb
@@ -67,7 +67,7 @@
                   <div class="d-flex mt-4 justify-content-around align-items-center">
                     <div class="text-center">
                       <%= image_tag "average2.svg", class:"dash-pic", alt: "picture" %>
-                      <h2 class="m-3 kpidash"><%= @investments.where.not(payment_date: nil).count%></h2>
+                      <h2 class="m-3 kpidash"><%= @avge_loan_dur%></h2>
                       <h2 class="text-secondary mb-2" style="font-size: 20px;">Av. Duration</h2>
                     </div>
                   </div>
@@ -79,7 +79,7 @@
               <!-- graph 1 -->
               <div class="item-dash my-3">
                 <h4 class="text-center">$ Invested over time</h4>
-                <%= column_chart @investments.group(:payment_date).sum(:amount), colors: ["#98d1a0"], xtitle: "Time", ytitle: "$ invested", min: nil, max: nil %>
+                <%= column_chart @investments_2, colors: ["#98d1a0"], xtitle: "Time", ytitle: "$ invested", min: nil, max: nil %>
               </div>
             </div>
 
