--- a/app/views/investments/confirmation.html.erb
+++ b/app/views/investments/confirmation.html.erb
@@ -1,6 +1,6 @@
 
 
-<div class="text-white container vh-100">
+<div class="text-white container">
 
   <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-dark" style="border-radius: 10px">
       <div class="col-md-5 p-lg-5 mx-auto my-5">
