banner pushed down on MAP page

--- a/app/views/investments/map.html.erb
+++ b/app/views/investments/map.html.erb
@@ -5,7 +5,7 @@
       <%= render '/shared/investor_dashboard_sidebar' %>
     </div>
 
-    <div class="col-lg-10 p-0">
+    <div class="col-lg-10 p-0" style="min-height: calc( 100vh - 73px - 75px);">
 
       <h3 class="my-4">Map of your investments</h3>
       <div class="d-flex pr-4">
