footer set to bottom on My investments page

--- a/app/views/investments/myinvestments.html.erb
+++ b/app/views/investments/myinvestments.html.erb
@@ -4,7 +4,7 @@
       <%= render '/shared/investor_dashboard_sidebar' %>
     </div>
 
-    <div class="col-lg-10 p-0">
+    <div class="col-lg-10 p-0" style="min-height: calc( 100vh - 73px - 75px);">
 
       <!-- # Tabs -->
       <ul class="nav nav-tabs" id="myTab" role="tablist">
