added months to 36

--- a/app/views/investments/dashboard.html.erb
+++ b/app/views/investments/dashboard.html.erb
@@ -67,8 +67,8 @@
                   <div class="d-flex mt-4 justify-content-around align-items-center">
                     <div class="text-center">
                       <%= image_tag "average2.svg", class:"dash-pic", alt: "picture" %>
-                      <h2 class="m-3 kpidash"><%= @avge_loan_dur%></h2>
-                      <h2 class="text-secondary mb-2" style="font-size: 20px;">Av. Duration</h2>
+                      <h2 class="m-3 kpidash"><%= @avge_loan_dur%><span style="font-size: 16px;"> months</span></h2>
+                      <h2 class="text-secondary mb-2" style="font-size: 20px;">Avg. Duration</h2>
                     </div>
                   </div>
                 </div>
