--- a/app/views/campaigns/shared/_card.html.erb
+++ b/app/views/campaigns/shared/_card.html.erb
@@ -39,7 +39,7 @@
             <% elsif days_left == 0 %>
             <h5><span class="badge badge-hour "> <%= (((campaign.expiry_date - DateTime.current)/(24*3600)).round(2).to_s.split(".").last.to_i * 0.24).round(0) %> hours left  </span></h5>
           <% else %>
-          <h5 class="pb-0"> <span class="badge badge-closed ">Funded </span></h5>
+          <h5 class="pb-0"> <span class="badge badge-closed ">Closed </span></h5>
           <% end %>
           <h1 class="mt-0 font-weight-bold" ><%= campaign.company.name %>
           </h1>
