capitalize some words

--- a/app/views/campaigns/raising.html.erb
+++ b/app/views/campaigns/raising.html.erb
@@ -17,7 +17,7 @@
         <div class="ml-4 mt-5 mb-2 d-flex align-items-top">
           <i class="fas fa-trophy icon-style"></i>
           <div class="d-flex flex-column">
-            <h3>100+ Success Stories</h3>
+            <h3>100+ Success stories</h3>
             <p>Fundeat has helped more than 100 restaurant owners to successfully fund their business development plans.</p>
           </div>
         </div>
